@@ -7,9 +7,6 @@ Version IntelliJ IDEA 2019.1
 Download an appropriate [JDK 12](https://jdk.java.net/12/) for your operating system. Make sure `JAVA_HOME` 
 is properly set to the Java 12 installation directory. 
 
-Download [JavaFX jmods](https://gluonhq.com/products/javafx/) for your operating 
-system and unzip to a desired location.
-
 ### Maven
 
 Clone the sample, open it with IntelliJ, and make sure the paths for Java 12 and 
@@ -17,7 +14,7 @@ JavaFX 12 match those on your machine.
 
 Run from command line:
 
-    mvn clean package javafx:run
+    mvn clean javafx:run
 
 As well, this will work from the terminal on Linux or Mac:
 
@@ -32,13 +29,11 @@ To create and run a custom JRE, from terminal:
 On Linux or Mac run:
 
     cd IDE/IntelliJ/Modular/Maven/hellofx
-    export PATH_TO_FX_MODS=path/to/javafx-jmods-12
-    $JAVA_HOME/bin/jlink --module-path $PATH_TO_FX_MODS:target/hellofx-1.0-SNAPSHOT.jar --add-modules=hellofx --output jre
-    jre/bin/java -m hellofx/org.openjfx.MainApp
+    mvn clean javafx:jlink
+    target/hellofx/bin/launcher
 
 On Windows run:
 
     cd IDE\IntelliJ\Modular\Maven\hellofx
-    set PATH_TO_FX_MODS="path\to\javafx-jmods-12"
-    jlink --module-path "%PATH_TO_FX_MODS%;target\hellofx-1.0-SNAPSHOT.jar" --add-modules=hellofx --output jre
-    jre\bin\java -m hellofx/org.openjfx.MainApp
+    mvn clean javafx:jlink
+    target\hellofx\bin\launcher
